--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<p>Rizos de permanente
+										Cuidado, porque ya no tienen por qué suponer una permanente sí o sí para lograrlos. Gracias a la popularidad que ha alcanzado el famoso método curly, es fácil lograrlos si te lo propones. Ahora bien, es una auténtica religión, muy metódica, constante y que requiere mucha perseverancia. Si no estás en ese mood, siempre te quedará tu peluquería de confianza.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
