--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
 								</div>
-							</section>
+							</section>El documental abordará toda la historia de Coliseum, desde que abrió sus puertas el 17 de septiembre de 1993 con la asistencia de "unas 600 personas". La semilla del proyecto la plantaron José Clavería y Pedro Aguirre, un hermano de Luis que falleció hace unos años. "Éramos muy amigos y en esos años íbamos mucho a La Ruta valenciana, pero también a discotecas de Madrid y Barcelona. Aquí en Zaragoza, nuestra ciudad, frecuentábamos mucho la KWM y allí conocimos a dj Frank. Nos hicimos muy amigos y los tres juntos, con el apoyo de nuestras familias, decidimos liarnos la manta a la cabeza y montar Coliseum", recuerda Clavería.
 
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Amet lorem</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p></p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
